- Fixed: Fix a security issue (DOS) in webserver to prevent a remote_endpoint exception to be thrown to the WebServer class causing the webserver to be down (no possible stop and no possible connection). Now, the webserver can be scanned using the nmap tool (for the SSL configuration purpose).
- Fixed: Under FreeBSD Hardware Monitor works, but it needs the libsysinfo package to work.
- Updated: OpenZWave, configuration files

Version 2.3530 (November 1th 2015)
- Implemented: Degree Days in Temperature report
- Implemented: RFXCom, support for Home Confort TEL-010
- Fixed: Segmentation fault while cleaning timed out sessions (#180)

Version 2.3521 (October 31th 2015)
- Implemented "Stop" state in blockly in switch states
- Implemented: Ability to parse data coming from an HTTP POST data with a lua script (seb)
- Implemented: Added Logitech Media Server support (thanks to EddyK69!!)
- Implemented: Added pushbullet notifications (thanks to tofra!!)
- Implemented: Arabic translation (big thanks to Mo7sen!!)
- Implemented: Blockly, Option to compare sensor value against another sensor value
- Implemented: Blockly, Split Utility Sensors into multiple groups
- Implemented: Blockly/Lua SendSMS
- Implemented: Catch SIGHUP signal for log rotation (LarsForum)
- Implemented: Danish translation (big thanks to jokkemokke!!)
- Implemented: Devices Tab, now displaying scenes/groups
- Implemented: Dummy Hardware, Ampere Single (single ampere value, other ampere sensor expects 3 values)
- Implemented: EventSystem, now also reacts on master switches when a slave switch state changes
- Implemented: EventSystem, now supports Weather sensors: UV/Distance, Wind Gust (or speed when gust is not available), Solar Radiation and Rain
- Implemented: EventSystem, optimized Blockly calls (saves a lot of calls and cpu)
- Implemented: Hebrew translation (big thanks to mickeyv!!)
- Implemented: HTTP Data push, new types for Type/SubType/Hostname/Device Name