@@ -6230,7 +6230,7 @@ bool CSQLHelper::HandleOnOffAction(const bool bIsOn, const std::string &OnAction
 			//Execute possible script
 			std::string scriptname = OnAction.substr(9);
 #if !defined WIN32
-			if (scriptname.compare("/") != 0)
+			if (scriptname.find("/") != 0)
 				scriptname = szUserDataFolder + "scripts/" + scriptname;
 #endif
 			std::string scriptparams="";
@@ -6262,7 +6262,7 @@ bool CSQLHelper::HandleOnOffAction(const bool bIsOn, const std::string &OnAction
 			//Execute possible script
 			std::string scriptname = OffAction.substr(9);
 #if !defined WIN32
-			if (scriptname.compare("/") != 0)
+			if (scriptname.find("/") != 0)
 				scriptname = szUserDataFolder + "scripts/" + scriptname;
 #endif
 			std::string scriptparams="";
