@@ -2077,7 +2077,7 @@ namespace http {
 				{
 					getline(infile, sLine);
 					root["LastLogTime"] = "";
-					if (sLine.compare("Version ") == 0)
+					if (sLine.find("Version ") == 0)
 						root["result"][ii]["level"] = 1;
 					else
 						root["result"][ii]["level"] = 0;
@@ -2130,7 +2130,7 @@ namespace http {
 			while (std::getline(stream, sLine))
 			{
 				root["LastLogTime"] = "";
-				if (sLine.compare("Version ") == 0)
+				if (sLine.find("Version ") == 0)
 					root["result"][ii]["level"] = 1;
 				else
 					root["result"][ii]["level"] = 0;
